gcc/testsuite/rust/rustc/ui/rfc-2126-extern-absolute-paths/non-existent-2.rs
// edition:2018

fn main() {
    let s = ::xcrate::S;
// { dg-error ".E0433." "" { target *-*-* } .-1 }
}

